--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,10 @@
-apply plugin: 'kotlin'
+apply plugin: 'groovy'
 apply plugin: 'maven-publish'
 
-buildscript {
-    ext.kotlin_version = '1.2.51'
-
-    repositories {
-        mavenLocal()
-        jcenter()
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-
 dependencies {
-    compileOnly gradleApi()
-    compileOnly 'com.android.tools.build:gradle-core:3.1.2'
+    compile gradleApi()
+    compileOnly 'com.android.tools.build:gradle:3.1.2'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
 
     testCompile 'junit:junit:4.12'
@@ -35,7 +21,7 @@ publishing {
         maven(MavenPublication) {
             groupId 'com.github.mariotaku'
             artifactId 'oss-apk-publisher-plugin'
-            version '0.0.6'
+            version '0.0.7'
 
             from components.java
         }
